--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3c.org/1999/xhtml" 
       xmlns:h="http://xmlns.jcp.org/jsf/html" 
@@ -33,7 +33,7 @@
                 </div>
                 <div class="form-group boton">
                   <!-- <label for="example Input Password1">Password</label> -->
-                  <p:inputText type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña" required="true"  value="#{inicioBean.password}" />
+                  <p:inputText type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña " required="true"  value="#{inicioBean.password}" />
                 </div>
                 <p:commandButton type="submit" class="btn btn-secondary boton" value="Iniciar Sesión" actionListener="#{inicioBean.doLogin}" />
                 <br></br>
