inicio sesion sin mejora grafica

--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -17,11 +17,11 @@
     <br></br>
     <br></br>
     <center>
-        <div class ="divform" style="border-radius: 50px">
+        <div class ="divform" style="border-radius: 50px; height: auto">
             <h:form  id="guess_form">
                 <br></br>
                 <br></br>
-                <img src="img/biblioteca.jpg"/>
+                <img src="img/biblioteca.jpg" style="height: auto; width: 600px"/>
                 <br></br>
                 <br></br>
                 <!-- Forma -->
