--- a/src/main/webapp/menu-usuario.html
+++ b/src/main/webapp/menu-usuario.html
@@ -55,7 +55,7 @@
             <ul class="dropdown-menu">
               <li><a href="#">Configuración</a></li>
               <li><a href="#">Cambiar Contraseña</a></li>
-              <li><a href="/faces/index.html">Cerrar Sesión</a></li>
+              <li><a href="#">Cerrar Sesión</a></li>
             </ul>
           </li>
         </ul>
@@ -117,7 +117,7 @@
               <div class="service-desc">
                   <h5>Consultar</h5>
                   <p>Recursos Disponibles</p>
-                <input type="button" class = "btn btn--radius btn--green" value="Consultar" onClick="location.href='/faces/registrar/consultar.xhtml'">
+                <button class="btn btn--radius btn--green" type="submit">Consultar</button>
               </div>
             </div>
           </div>
