--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -60,7 +60,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Iniciar Sesión <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="/faces/login/login.xhtml">Como Administrador</a></li>
-              <li><a href="/faces/login/login.html">Como Usuario</a></li>
+              <li><a href="/faces/login/login.xhtml">Como Usuario</a></li>
               <li><a href="#">Como Invitado</a></li>
             </ul>
           </li>
@@ -122,7 +122,9 @@
               </div>
               <div class="service-desc">
                 <h5>Consultar</h5>
-                <p>...</p>
+                p>Recursos Disponibles</p>
+                <input type="button" class = "btn btn--radius btn--green" value="Consultar" onClick="location.href='/faces/registrar/consultar.xhtml'">
+
               </div>
             </div>
           </div>
@@ -135,7 +137,9 @@
               </div>
               <div class="service-desc">
                 <h5>Registrar</h5>
-                <p>...</p>
+                <p>Nuevos Recursos</p>
+                <input type="button" class = "btn btn--radius btn--green" value="Registrar" data-toggle="modal" data-target="#admin">
+
               </div>
             </div>
           </div>
@@ -148,7 +152,9 @@
               </div>
               <div class="service-desc">
                 <h5>Reservar</h5>
-                <p>...</p>
+                <p>Recursos Disponibles</p>
+                <input type="button" class = "btn btn--radius btn--green" value="Reservar" data-toggle="modal" data-target="#usuario">
+
               </div>
             </div>
           </div>
@@ -161,7 +167,9 @@
               </div>
               <div class="service-desc">
                 <h5>Cancelar</h5>
-                <p>...</p>
+                <p>Reservaciones</p>
+                <input type="button" class = "btn btn--radius btn--green" value="Cancelar" data-toggle="modal" data-target="#usuario">
+
               </div>
             </div>
           </div>
@@ -170,7 +178,46 @@
     </div>
   </section>
   <!-- /Section: services -->
+<div class="modal fade" id="admin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <br></br>
+    <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Atención</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        .Debes Iniciar Sesión como Administrador para usar este servicio!!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Ok</button>
 
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="usuario" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <br></br>
+    <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Atención</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Debes Iniciar Sesión como Usuario para usar este servicio!!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
