--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -60,7 +60,7 @@
             <ul class="dropdown-menu">
               <li><a href="#">Configuración</a></li>
               <li><a href="#">Cambiar Contraseña</a></li>
-              <li><a href="#">Cerrar Sesión</a></li>
+              <li><a href="/faces/index.html">Cerrar Sesión</a></li>
             </ul>
           </li>
         </ul>
@@ -122,9 +122,9 @@
               </div>
               <div class="service-desc">
                 <h5>Consultar</h5>
-                <p>
-                    <input type="button" class = "btn btn--radius btn--green" value="Consultar" onClick="location.href='/faces/registrar/consultar.xhtml'">
-                </p>
+                 <p>Recursos Disponibles</p>
+                <input type="button" class = "btn btn--radius btn--green" value="Consultar" onClick="location.href='/faces/registrar/consultar.xhtml'">
+
               </div>
             </div>
           </div>
@@ -137,9 +137,9 @@
               </div>
               <div class="service-desc">
                 <h5>Registrar</h5>
-                <p>
-                    <input type="button" class = "btn btn--radius btn--green" value="registrar" onClick="location.href='/faces/registrar/registro.xhtml'">
-                </p>
+                 <p>Nuevos Recursos</p>
+                <input type="button" class = "btn btn--radius btn--green" value="registrar" onClick="location.href='/faces/registrar/registro.xhtml'">
+
               </div>
             </div>
           </div>
@@ -152,9 +152,9 @@
               </div>
               <div class="service-desc">
                 <h5>Modificar</h5>
-                <p>
-                    <input type="button" class = "btn btn--radius btn--green" value="Modificar" onClick="location.href='/faces/registrar/modificar.xhtml'">
-                </p>
+                <p>Recursos Existentes</p>
+                <input type="button" class = "btn btn--radius btn--green" value="Modificar" onClick="location.href='/faces/registrar/modificar.xhtml'">
+
               </div>
             </div>
           </div>
