--- a/src/main/webapp/registrar/registro.xhtml
+++ b/src/main/webapp/registrar/registro.xhtml
@@ -63,7 +63,7 @@
                         </div>
 
                         <div class="p-t-20">
-                            <p:commandButton class="login100-form-btn" value="Registrar" actionListener="#{recursoBean.registrarElemento}" ></p:commandButton>
+                            <p:commandButton class="login100-form-btn" value="Registrar" actionListener="#{recursoBean.registrarRecurso()}" ></p:commandButton>
                         </div>
                     
                 </div>
