Interfaz Gráfica Arreglo ortográfico

--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -56,11 +56,11 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#service">Servicios</a></li>
           <li class="slogan">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tu Sesión <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tu Sesion <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Configuración</a></li>
-              <li><a href="#">Cambiar Contraseña</a></li>
-              <li><a href="/faces/index.html">Cerrar Sesión</a></li>
+              <li><a href="#">Configuracion</a></li>
+              <li><a href="#">Cambiar Contrasena</a></li>
+              <li><a href="/faces/index.html">Cerrar Sesion</a></li>
             </ul>
           </li>
         </ul>
