--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,7 +61,6 @@
             <ul class="dropdown-menu">
               <li><a href="/faces/login/login.xhtml">Como Administrador</a></li>
               <li><a href="/faces/login/login.xhtml">Como Usuario</a></li>
-              <li><a href="#">Como Invitado</a></li>
             </ul>
           </li>
         </ul>
@@ -122,7 +121,7 @@
               </div>
               <div class="service-desc">
                 <h5>Consultar</h5>
-                p>Recursos Disponibles</p>
+                <p>Recursos Disponibles</p>
                 <input type="button" class = "btn btn--radius btn--green" value="Consultar" onClick="location.href='/faces/registrar/consultar.xhtml'">
 
               </div>
@@ -189,7 +188,7 @@
         </button>
       </div>
       <div class="modal-body">
-        .Debes Iniciar Sesión como Administrador para usar este servicio!!
+        Debes Iniciar Sesión como Administrador para usar este servicio!!
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-dismiss="modal">Ok</button>
