--- a/src/main/webapp/registrar/consultar.xhtml
+++ b/src/main/webapp/registrar/consultar.xhtml
@@ -4,6 +4,7 @@
 <h:head>
     <!-- Required meta tags-->
     <meta charset="UTF-8"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-type" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content="Colorlib Templates"/>
     <meta name="author" content="Colorlib"/>
@@ -41,29 +42,31 @@
                     <div class="container">
                         <center>
                             <h:form id="form">
-                                    <p:dataTable id="recursosTable" value="#{recursoBean.recursosList}" var="rec" widgetVar="recTable"
+                                    <p:dataTable id="recursosTable" value="#{recursoBean.consultarRecursos()}" var="rec" widgetVar="recTable"
                                                  rows="10" paginator="true" paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {Exporters}"
                                                  sortMode="multiple" paginatorPosition="bottom">
-                                        <p:column style="column-width: 50em;    " headerText="Id" sortBy="#{recursoBean.id}">
+                                        
+                                        
+                                        <p:column style="column-width: 50em;    " headerText="Id" sortBy="#{rec.id}">
                                             <h:outputText value=""/>
                                         </p:column>
                                         <p:column headerText="Tipo" sortBy="" filterMatchMode="exact" filterBy="recursoBean.tipo}">
-	
+                                            <h:outputText value="#{rec.tipo}"/>
 										<!-- Falta el tipo -->
 
                                         </p:column>
-                                        <p:column headerText="Nombre" sortBy="#{recursoBean.nombre}">
-                                            <h:outputText value="#{recursoBean.nombre}"/>
+                                        <p:column headerText="Nombre" sortBy="#{rec.nombre}">
+                                            <h:outputText value="#{rec.nombre}"/>
                                         </p:column>
-                                        <p:column headerText="Ubicacion" sortBy="#{recursoBean.ubicacion}" filterBy="#{recursoBean.ubicacion}" filterMatchMode="exact">
-                                            <h:outputText value="#{recursoBean.ubicacion}"/>
+                                        <p:column headerText="Ubicacion" sortBy="#{rec.ubicacion}" filterBy="#{rec.ubicacion}" filterMatchMode="exact">
+                                            <h:outputText value="#{rec.ubicacion}"/>
                                         </p:column>
-                                        <p:column headerText="Capacidad" sortBy="#{recursoBean.capacidad}" filterBy="#{recursoBean.capacidad}" filterMatchMode="exact">
-                                            <h:outputText value="#{recursoBean.capacidad}"/>
+                                        <p:column headerText="Capacidad" sortBy="#{rec.capacidad}" filterBy="#{rec.capacidad}" filterMatchMode="exact">
+                                            <h:outputText value="#{rec.capacidad}"/>
                                         </p:column>
 
-                                        <p:column headerText="estado" sortBy="#{recursoBean.disponible}">
-                                            <h:outputText value="#{recursoBean.disponible}"/>
+                                        <p:column headerText="estado" sortBy="#{rec.disponible}">
+                                            <h:outputText value="#{rec.disponible}"/>
                                         </p:column>
                                     </p:dataTable>
                             </h:form>
