--- a/src/main/webapp/registrar/consultar.xhtml
+++ b/src/main/webapp/registrar/consultar.xhtml
@@ -11,7 +11,7 @@
     <meta name="keywords" content="Colorlib Templates"/>
 
     <!-- Title Page-->
-    <title>Registro Recurso</title>
+    <title>Consultando Recursos</title>
 
     <!-- Icons font CSS-->
     <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all"/>
@@ -48,11 +48,10 @@
                                         
                                         
                                         <p:column style="column-width: 50em;    " headerText="Id" sortBy="#{rec.id}">
-                                            <h:outputText value=""/>
+                                            <h:outputText value="#{rec.id}"/>
                                         </p:column>
                                         <p:column headerText="Tipo" sortBy="" filterMatchMode="exact" filterBy="recursoBean.tipo}">
                                             <h:outputText value="#{rec.tipo}"/>
-										<!-- Falta el tipo -->
 
                                         </p:column>
                                         <p:column headerText="Nombre" sortBy="#{rec.nombre}">
