--- a/src/main/webapp/menu-usuario.html
+++ b/src/main/webapp/menu-usuario.html
@@ -51,11 +51,11 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#service">Servicios</a></li>
           <li class="slogan">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tu Sesión <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tu Sesion <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Configuración</a></li>
+              <li><a href="#">Configuracion</a></li>
               <li><a href="#">Cambiar Contraseña</a></li>
-              <li><a href="/faces/index.html" >Cerrar Sesión</a></li>
+              <li><a href="/faces/index.html" >Cerrar Sesion</a></li>
             </ul>
           </li>
         </ul>
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="wow fadeInLeft" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
@@ -123,7 +123,24 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
+          <div class="wow fadeInUp" data-wow-delay="0.2s">
+            <div class="service-box">
+              <div class="service-icon">
+                <img src="img/icons/service-icon-2.png" alt="" />
+              </div>
+              <div class="service-desc">
+                <h5>Reservar</h5>
+                <p>Recursos Disponibles</p>
+                <!-- <button class="btn btn--radius btn--green" type="submit">Reservar</button> -->
+
+                <input type="button" class = "btn btn--radius btn--green" value="Reservar" onClick="location.href='/faces/registrar/reservar.xhtml'">
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
           <div class="wow fadeInUp" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
@@ -137,7 +154,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+
+        <div class="col-md-3">
           <div class="wow fadeInUp" data-wow-delay="0.2s">
             <div class="service-box">
               <div class="service-icon">
@@ -151,6 +169,9 @@
             </div>
           </div>
         </div>
+
+
+
       </div>
     </div>
   </section>
