--- a/src/main/webapp/registrar/registro.xhtml
+++ b/src/main/webapp/registrar/registro.xhtml
@@ -42,7 +42,7 @@
                     
                     <h:form id="RegistroTipo">  
                         <p:outputLabel for="@next"  value="Tipo: " />
-                            <h:selectOneMenu id="tipo" type="String" value="#{recursoBean.tipo}" binding="#{tipo}" required="true" dynamic="true" style="width:600px;">
+                            <h:selectOneMenu id="tipo"  value="#{recursoBean.tipo}" binding="#{tipo}" required="true" dynamic="true" style="width:600px;">
                                     <f:selectItem itemLabel="Select One" itemValue=""/>
                                     <f:selectItem itemLabel="Computador" itemValue="computador" />
                                     <f:selectItem itemLabel="Libro" itemValue="libro"/>
